[package]
name = "traffic_server"
version = "0.1.0"
authors = ["Philip Van Raalte <phil.vanraalte@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
env_logger = "0.6"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
juniper = "0.12"
mongodb = "0.3.12"
bson = "0.13"
traffic = { path = "../traffic" }
